--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.2.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "nocache": "^3.0.4",
     "session-file-store": "^1.5.0",
     "uuid4": "^2.0.3"
   }
